--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -2,13 +2,7 @@ name: PR Labels
 
 on:
     pull_request:
-        types:
-            - labeled
-            - unlabeled
-            - opened
-            - edited
-    label:
-        types: [created, edited, deleted]
+        types: [labeled, unlabeled]
 
 jobs:
     enforce-label:
