--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -2,7 +2,7 @@ name: PR Labels
 
 on:
     pull_request:
-        types: [labeled, unlabeled]
+        types: [labeled, unlabeled, opened, edited]
 
 jobs:
     enforce-label:
