--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,9 +142,11 @@ jobs:
         steps:
             - name: echo title
               run: |
+                  echo $JSON
                   echo "title is '$TITLE'"
               env:
                   TITLE: ${{ github.event.pull_request.title }}
+                  JSON: ${{ toJson(github.event) }}
 
             - name: check for major
               id: major
