--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,7 +102,7 @@ jobs:
 
     tag_and_publish:
         needs: [lint, test]
-        if: ${{ !startsWith(github.event.head_commit.message, 'skip') }}
+        if: ${{ !startsWith(github.event.head_commit.message, 'chore') }}
         runs-on: ubuntu-latest
         steps:
             - name: checkout repo
@@ -132,50 +132,42 @@ jobs:
               if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
 
             - name: maybe bump major
-              if: ${{ contains(github.event.pull_request.labels.*.name, 'major') }}
+              if: startsWith(github.event.head_commit.message, 'breaking')
               run: |
                   poetry version major
+                  echo "isMajor=1" >> $GITHUB_ENV
 
             - name: maybe bump minor
-              if: ${{ contains(github.event.pull_request.labels.*.name, 'minor') }}
+              if: startsWith(github.event.head_commit.message, 'feat')
               run: |
                   poetry version minor
 
             - name: maybe bump patch
-              if: ${{ contains(github.event.pull_request.labels.*.name, 'patch') }}
+              if: startsWith(github.event.head_commit.message, 'fix')
               run: |
                   poetry version patch
+                  echo "isPatch=1" >> $GITHUB_ENV
 
             - name: poetry publish
-              if: ${{ !contains(github.event.pull_request.labels.*.name, 'other') }}
               run: |
                   poetry build
                   poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
                   poetry publish
 
             - name: get version number
-              if: ${{ !contains(github.event.pull_request.labels.*.name, 'other') }}
               run: |
                   VERSION=$(poetry version)
                   VERSION=v${VERSION#"us-data "}
                   echo "version=$VERSION" >> $GITHUB_ENV
 
-            - name: make changelog
-              if: ${{ !contains(github.event.pull_request.labels.*.name, 'other') }}
-              uses: vemel/update-changelog@0.0.1
-              id: changelog
-              with:
-                  version: ${{ env.version }}
-
             - name: commit to master
-              if: ${{ !contains(github.event.pull_request.labels.*.name, 'other') }}
               uses: EndBug/add-and-commit@v6
               with:
                   message: bump ${{ env.version }}
                   tag: ${{ env.version }}
+                  author_email: drawjk705@gmail.com
 
             - name: store version
-              if: ${{ !contains(github.event.pull_request.labels.*.name, 'other') }}
               uses: nick-invision/persist-action-data@v1
               with:
                   data: ${{ env.version }}
@@ -183,7 +175,7 @@ jobs:
 
     github_release:
         needs: [tag_and_publish]
-        if: ${{ !startsWith(github.event.head_commit.message, 'skip') && github.event.label.name != 'other' }}
+        if: ${{ !startsWith(github.event.head_commit.message, 'chore') }}
         runs-on: ubuntu-latest
         steps:
             - name: checkout repo
