--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "us-data"
-version = "0.1.1"
+name = "the_census"
+version = "0.1.0"
 description = "Tool to get and query US Census data"
 authors = ["Joel Krim <drawjk705@gmail.com>"]
 classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
@@ -45,7 +45,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.poe.tasks]
 test = "pytest -m \"not integration\""
 test-integration = "pytest -m integration"
-test-coverage = "pytest --cov-report term-missing:skip-covered --cov=us_data tests/"
+test-coverage = "pytest --cov-report term-missing:skip-covered --cov=the_census tests/"
 typing = "python3 run_pyright.py"
 lint-fix = "black . --exclude typings"
 lint = "black . --check --exclude typings"
@@ -54,5 +54,5 @@ clean = "rm rf ./**/__pycache__"
 
 [tool.isort]
 profile = "black"
-src_paths = ["us_data", "tests"]
+src_paths = ["the_census", "tests"]
 skip_glob = '**/typings/**'
