--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,6 +137,12 @@ jobs:
             - name: try build
               run: poetry build
 
+            - name: test version
+              run: |
+                  VERSION=$(poetry version)
+                  VERSION=v${VERSION#"the-census "}
+                  echo $VERSION
+
     enforce-title:
         runs-on: ubuntu-latest
         steps:
