--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python-version: [3.8, 3.9]
+                python-version: [3.9]
             fail-fast: false
 
         steps:
@@ -104,7 +104,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python-version: [3.8, 3.9]
+                python-version: [3.9]
             fail-fast: false
 
         steps:
