--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python-version: [3.8, 3.9]
+                python-version: [3.9]
             fail-fast: false
 
         steps:
@@ -37,7 +37,7 @@ jobs:
               uses: actions/cache@v2
               with:
                   path: .venv
-                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}-${{ secrets.CACHE_VERSION }}
 
             - name: install poetry dependencies
               run: poetry install
@@ -48,7 +48,7 @@ jobs:
               uses: actions/cache@v2
               with:
                   path: ~/.npm
-                  key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+                  key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}-${{ secrets.CACHE_VERSION }}
 
             - name: install pyright dependencies
               run: sudo npm install -g pyright
@@ -64,7 +64,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python-version: [3.8, 3.9]
+                python-version: [3.9]
             fail-fast: false
 
         steps:
@@ -88,7 +88,7 @@ jobs:
               uses: actions/cache@v2
               with:
                   path: .venv
-                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}-${{ secrets.CACHE_VERSION }}
 
             - name: install poetry dependencies
               run: poetry install
@@ -104,7 +104,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python-version: [3.8, 3.9]
+                python-version: [3.9]
             fail-fast: false
 
         steps:
@@ -128,7 +128,7 @@ jobs:
               uses: actions/cache@v2
               with:
                   path: .venv
-                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+                  key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}-${{ secrets.CACHE_VERSION }}
 
             - name: install poetry dependencies
               run: poetry install
