--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,19 @@ jobs:
 
             - name: install pyright dependencies
               run: sudo npm install -g pyright
+              if: steps.cached-npm-dependencies.outputs.cache-hit != 'true'
+
+            - name: load cached typestubs
+              id: cached-typestubs
+              uses: actions/cache@v2
+              with:
+                  path: typings
+                  key: typings-${{ runner.os }}-${{ secrets.CACHE_VERSION }}
+
+            - name: make typestubs
+              run: |
+                  python3 generate_typestubs.py
+              if: steps.cached-typestubs.outputs.cache-hit != 'true'
 
             - name: lint
               run: |
