--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ build-backend = "poetry.core.masonry.api"
 test = "pytest -m \"not integration\""
 test-integration = "pytest -m integration"
 test-coverage = "pytest --cov-report term-missing:skip-covered --cov=the_census tests/"
-typing = "pyright ."
+typing = "pyright"
 lint-fix = "black . --exclude typings"
 lint = "black . --check --exclude typings"
 sort-imports = "isort ."
